<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:layout_margin="@dimen/widget_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/widget_title_container"
        android:background="@color/black"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:id="@+id/widget_title"
            android:text="@string/tasks_list"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_below="@id/widget_title_container"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:padding="8dp"
            android:textColor="@color/white"
            android:text="@string/today"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/today_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:background="@android:color/black"
                android:padding="8dp"
                android:textColor="@color/white"
                android:text="@string/tomorrow"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/tomorrowTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
            <TextView
                android:layout_width="match_parent"
                android:background="@android:color/black"
                android:padding="8dp"
                android:textColor="@color/white"
                android:text="@string/upcoming"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/upcomingTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
        </ListView>
    </LinearLayout>
</RelativeLayout>